--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
 			<version>3.2.0.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.ajaxtags</groupId>
+			<artifactId>ajaxtags</artifactId>
+			<version>1.1.5</version>
+		</dependency>
 	</dependencies>
 
 
